@@ -2,6 +2,7 @@
 
 	* org.el (org-display-inline-images): Do the entire buffer,
 	not just the narrowed region.  Clear the cache.
+	(org-display-inline-images): Match mode file paths.
 
 2010-05-10  Carsten Dominik  <carsten.dominik@gmail.com>
 
